@@ -1,5 +1,12 @@
 2004-06-24  Andrew Cagney  <cagney@gnu.org>
 
+	* defs.h (deprecated_pre_add_symbol_hook)
+	(deprecated_post_add_symbol_hook): Deprecated.
+	* symfile.c (symbol_file_add_with_addrs_or_offsets) 
+	(symbol_file_add_with_addrs_or_offsets): Update references.
+
+2004-06-24  Andrew Cagney  <cagney@gnu.org>
+
 	* defs.h (post_add_symbol_hook, pre_add_symbol_hook)
 	(ui_loop_hook, selected_frame_level_changed_hook): Declare.
 	* wince.c (ui_loop_hook): Delete extern declaration.
